<resources>
    <string name="app_name">Lemur</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_vision">Vision</string>
    <string name="title_activity_decibel">Decibel</string>
    <string name="title_activity_altimeter">Altimeter</string>
    <string name="title_activity_accelerometer">Accelerometer</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Strings Used in Accelerometer activity -->
    <string name="squared_symbolX">X-Axis (m/s&#178;)</string>
    <string name="squared_symbolY">Y-Axis (m/s&#178;)</string>
    <string name="squared_symbolZ">Z-Axis (m/s&#178;)</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Decibel strings -->
    <string name="small_text_view"><u>Reset Values</u></string>
    <string name="decibel_cardmenu">Decibel (dB)</string>

    <!-- Altimeter strings -->
    <string name="altimeter_cardmenu">Altitude (MASL)</string>


    <!-- Help menu strings -->
    <string name="empty_string"></string>
    <string name="lemur_helpText">
        \nLemur is the result of a four people group project in the course Mobile Applications, taken in Västerås on
        Mälardalen University.
        \n\nThe objective was to create a working application for a mobile device. One requirement was
        to use at least one of the phones sensors. For a higher grade the application also had to be
        fully operational without bugs and with a user friendly interface.
        \n\nLemur is a fun measurement tool right in your phone. We took the requirement for <b>at least</b>
        one sensor to the next level. We decided to use as many as we had time to implement. Lemur allows
        the user to apply the phones different sensors and features for other things than was originally intended.
        Want to measure the sound intensity in the room? Or maybe see how high above the sea level you are
        at the moment? <b>Lemur can do it.</b>
        \n\n<b>Lemur is not meant to be used as a serious measurement tool and might not always display the exact value.</b>

    </string>
    <string name="accelerometer_helpText">
        Soon to be AWESOME, descriptive and helpful content!
        \nSoon to be AWESOME, descriptive and helpful content!
        \nSoon to be AWESOME, descriptive and helpful content!
        \nSoon to be AWESOME, descriptive and helpful content!
        \nSoon to be AWESOME, descriptive and helpful content!
        \nSoon to be AWESOME, descriptive and helpful content!
        \nSoon to be AWESOME, descriptive and helpful content!
        \nSoon to be AWESOME, descriptive and helpful content!
    </string>
    <string name="altimeter_helpText">
        Soon to be AWESOME, descriptive and helpful content!
        \nSoon to be AWESOME, descriptive and helpful content!
        \nSoon to be AWESOME, descriptive and helpful content!
    </string>
    <string name="decibel_helpText">Decibel will measure the sound intensity recorded by the microphone and display it in decibel.
        \n\n<b>Decibel is not meant to be used as a serious measurement tool and might not display the exact right value.</b>
        \n\nSince different phones can have a wide variety of different microphones implemented this function
        can only display an estimate that might differ from phone to phone. To be sure the value is right
        each phone would need to have the exact same hardware installed or be individually calibrated by more
        advanced equipment to be sure that they measure exactly right.
    </string>
    <string name="vision_helpText">
        Soon to be AWESOME, descriptive and helpful content!
        \nSoon to be AWESOME, descriptive and helpful content!
        \nSoon to be AWESOME, descriptive and helpful content!
        \nSoon to be AWESOME, descriptive and helpful content!
    </string>


</resources>
